arquillian test to apmanager domain module added